--- a/app/src/main/res/drawable/profile.xml
+++ b/app/src/main/res/drawable/profile.xml
@@ -1,7 +1,12 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="129" android:viewportWidth="129" android:width="24dp">
-      
-    <path android:fillColor="#FF000000" android:pathData="m64.3,71.6c18,0 32.6,-14.6 32.6,-32.6s-14.6,-32.5 -32.6,-32.5 -32.6,14.6 -32.6,32.5 14.6,32.6 32.6,32.6zM64.3,15c13.2,0 24,10.8 24,24s-10.8,24 -24,24 -24,-10.8 -24,-24 10.8,-24 24,-24z"/>
-      
-    <path android:fillColor="#FF000000" android:pathData="m7.9,122.5h113.2c2.4,0 4.3,-1.9 4.3,-4.3 0,-22.5 -18.3,-40.9 -40.9,-40.9h-40c-22.5,0 -40.9,18.3 -40.9,40.9 -0,2.4 1.9,4.3 4.3,4.3zM44.5,85.9h40c16.4,0 29.9,12.2 32,28h-104c2.1,-15.7 15.6,-28 32,-28z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+
+    <path android:fillColor="#FF000000"
+        android:pathData="M256,284.8c71.9,0 130,-58.1 130,-130s-58.1,-130 -130,-130s-130,58.1 -130,130s58.1,130 130,130zM256,59.5c54.8,0 99.5,44.7 99.5,99.5s-44.7,99.5 -99.5,99.5s-99.5,-44.7 -99.5,-99.5s44.7,-99.5 99.5,-99.5z"/>
+
+    <path android:fillColor="#FF000000"
+        android:pathData="M31.5,487h449c9.6,0 17,-7.4 17,-17c0,-87.5 -71.2,-159 -159,-159h-165c-87.5,0 -159,71.2 -159,159c0,9.6 7.4,17 17,17zM178,337h165c63.8,0 116.2,47.4 124,109h-413c7.8,-61.6 60.2,-109 124,-109z"/>
 </vector>
