--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,25 +4,25 @@
 
     <item
         android:id="@+id/explore"
-        android:title="Explore"
+        android:title="@string/explore"
         android:icon="@drawable/explore"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/recent"
-        android:title="Recent"
+        android:title="@string/recent"
         android:icon="@drawable/recent"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/search"
-        android:title="Search"
+        android:title="@string/search"
         android:icon="@drawable/search"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/profile"
-        android:title="Profile"
+        android:title="@string/profile"
         android:icon="@drawable/profile"
         app:showAsAction="ifRoom" />
 </menu>
