Feat: Add auth flow

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,145 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#2D00B0</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#4425D6</color>
+    <color name="md_theme_onPrimaryContainer">#BDB6FF</color>
+    <color name="md_theme_secondary">#5C559F</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#B5ADFE</color>
+    <color name="md_theme_onSecondaryContainer">#453D86</color>
+    <color name="md_theme_tertiary">#630069</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#890091</color>
+    <color name="md_theme_onTertiaryContainer">#FF9AFB</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#FCF8FF</color>
+    <color name="md_theme_onBackground">#1C1A24</color>
+    <color name="md_theme_surface">#FCF8FF</color>
+    <color name="md_theme_onSurface">#1C1A24</color>
+    <color name="md_theme_surfaceVariant">#E5E0F5</color>
+    <color name="md_theme_onSurfaceVariant">#474555</color>
+    <color name="md_theme_outline">#787587</color>
+    <color name="md_theme_outlineVariant">#C8C4D8</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#312F39</color>
+    <color name="md_theme_inverseOnSurface">#F3EFFD</color>
+    <color name="md_theme_inversePrimary">#C6BFFF</color>
+    <color name="md_theme_primaryFixed">#E4DFFF</color>
+    <color name="md_theme_onPrimaryFixed">#160066</color>
+    <color name="md_theme_primaryFixedDim">#C6BFFF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#3D19D0</color>
+    <color name="md_theme_secondaryFixed">#E4DFFF</color>
+    <color name="md_theme_onSecondaryFixed">#180B58</color>
+    <color name="md_theme_secondaryFixedDim">#C6BFFF</color>
+    <color name="md_theme_onSecondaryFixedVariant">#443D85</color>
+    <color name="md_theme_tertiaryFixed">#FFD6F8</color>
+    <color name="md_theme_onTertiaryFixed">#37003B</color>
+    <color name="md_theme_tertiaryFixedDim">#FFA9FA</color>
+    <color name="md_theme_onTertiaryFixedVariant">#7F0086</color>
+    <color name="md_theme_surfaceDim">#DCD8E6</color>
+    <color name="md_theme_surfaceBright">#FCF8FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F6F1FF</color>
+    <color name="md_theme_surfaceContainer">#F0ECFA</color>
+    <color name="md_theme_surfaceContainerHigh">#EBE6F4</color>
+    <color name="md_theme_surfaceContainerHighest">#E5E0EE</color>
+    <color name="md_theme_primary_mediumContrast">#2D00B0</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#4425D6</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#EDE8FF</color>
+    <color name="md_theme_secondary_mediumContrast">#332B73</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#6B64AF</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#630069</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#890091</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFE2F8</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FCF8FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#1C1A24</color>
+    <color name="md_theme_surface_mediumContrast">#FCF8FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#111019</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E5E0F5</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#363444</color>
+    <color name="md_theme_outline_mediumContrast">#535061</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6E6B7D</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#312F39</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F3EFFD</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#C6BFFF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#6550F7</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#4C31DE</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#6B64AF</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#524B94</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#B037B5</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#93149A</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C8C4D2</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FCF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F6F1FF</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EBE6F4</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DFDBE8</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D4D0DD</color>
+    <color name="md_theme_primary_highContrast">#240094</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#401ED2</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#292069</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#463F88</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#530058</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#83008B</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FCF8FF</color>
+    <color name="md_theme_onBackground_highContrast">#1C1A24</color>
+    <color name="md_theme_surface_highContrast">#FCF8FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E5E0F5</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#2C2A3A</color>
+    <color name="md_theme_outlineVariant_highContrast">#494758</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#312F39</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#C6BFFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#401ED2</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#2A00A6</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#463F88</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#302770</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#83008B</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#5D0063</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#BBB7C4</color>
+    <color name="md_theme_surfaceBright_highContrast">#FCF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F3EFFD</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E5E0EE</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D7D2E0</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C8C4D2</color>
 </resources>
