--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#090A43</color>
+    <color name="light_gray">#BBBEDD</color>
+    <color name="purple">#321D86</color>
 </resources>
