--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:clipToPadding="false">
+    android:background="@color/md_theme_background"
+    tools:context=".RecentActivity">
 
     <!-- Title -->
     <TextView
@@ -24,18 +24,32 @@
         android:shadowRadius="3"/>
 
     <!-- List of Recently Played Songs -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recent_recycler_view"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recent_recycler_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1"-->
+<!--        android:scrollbars="vertical"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:clipToPadding="false"-->
+<!--        android:paddingTop="8dp"-->
+<!--        android:paddingBottom="8dp"-->
+<!--        android:background="@drawable/recycler_view_background"-->
+<!--        android:elevation="4dp"-->
+<!--        android:layout_gravity="center"/>-->
+
+    <FrameLayout
+        android:id="@+id/songs_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scrollbars="vertical"
-        android:layout_marginBottom="16dp"
-        android:clipToPadding="false"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:background="@drawable/recycler_view_background"
-        android:elevation="4dp"
-        android:layout_gravity="center"/>
+        android:layout_margin="16dp"/>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_nav_menu"
+        app:labelVisibilityMode="labeled"
+        android:elevation="10dp" />
 </LinearLayout>
