--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
@@ -9,143 +8,143 @@
     <color name="dark_gray_transparent">#80212121</color>
     <color name="md_theme_primary">#2D00B0</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
-    <color name="md_theme_primaryContainer">#4425D6</color>
-    <color name="md_theme_onPrimaryContainer">#BDB6FF</color>
-    <color name="md_theme_secondary">#5C559F</color>
+    <color name="md_theme_primaryContainer">#2170E4</color>
+    <color name="md_theme_onPrimaryContainer">#FEFCFF</color>
+    <color name="md_theme_secondary">#495E8A</color>
     <color name="md_theme_onSecondary">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer">#B5ADFE</color>
-    <color name="md_theme_onSecondaryContainer">#453D86</color>
-    <color name="md_theme_tertiary">#630069</color>
+    <color name="md_theme_secondaryContainer">#B6CCFF</color>
+    <color name="md_theme_onSecondaryContainer">#405682</color>
+    <color name="md_theme_tertiary">#8C34A2</color>
     <color name="md_theme_onTertiary">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer">#890091</color>
-    <color name="md_theme_onTertiaryContainer">#FF9AFB</color>
+    <color name="md_theme_tertiaryContainer">#A84FBE</color>
+    <color name="md_theme_onTertiaryContainer">#FFFBFF</color>
     <color name="md_theme_error">#BA1A1A</color>
     <color name="md_theme_onError">#FFFFFF</color>
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#93000A</color>
-    <color name="md_theme_background">#FCF8FF</color>
-    <color name="md_theme_onBackground">#1C1A24</color>
-    <color name="md_theme_surface">#FCF8FF</color>
-    <color name="md_theme_onSurface">#1C1A24</color>
-    <color name="md_theme_surfaceVariant">#E5E0F5</color>
-    <color name="md_theme_onSurfaceVariant">#474555</color>
-    <color name="md_theme_outline">#787587</color>
-    <color name="md_theme_outlineVariant">#C8C4D8</color>
+    <color name="md_theme_background">#F9F9FF</color>
+    <color name="md_theme_onBackground">#191B23</color>
+    <color name="md_theme_surface">#F9F9FF</color>
+    <color name="md_theme_onSurface">#191B23</color>
+    <color name="md_theme_surfaceVariant">#DEE2F2</color>
+    <color name="md_theme_onSurfaceVariant">#424754</color>
+    <color name="md_theme_outline">#727785</color>
+    <color name="md_theme_outlineVariant">#C2C6D6</color>
     <color name="md_theme_scrim">#000000</color>
-    <color name="md_theme_inverseSurface">#312F39</color>
-    <color name="md_theme_inverseOnSurface">#F3EFFD</color>
-    <color name="md_theme_inversePrimary">#C6BFFF</color>
-    <color name="md_theme_primaryFixed">#E4DFFF</color>
-    <color name="md_theme_onPrimaryFixed">#160066</color>
-    <color name="md_theme_primaryFixedDim">#C6BFFF</color>
-    <color name="md_theme_onPrimaryFixedVariant">#3D19D0</color>
-    <color name="md_theme_secondaryFixed">#E4DFFF</color>
-    <color name="md_theme_onSecondaryFixed">#180B58</color>
-    <color name="md_theme_secondaryFixedDim">#C6BFFF</color>
-    <color name="md_theme_onSecondaryFixedVariant">#443D85</color>
-    <color name="md_theme_tertiaryFixed">#FFD6F8</color>
-    <color name="md_theme_onTertiaryFixed">#37003B</color>
-    <color name="md_theme_tertiaryFixedDim">#FFA9FA</color>
-    <color name="md_theme_onTertiaryFixedVariant">#7F0086</color>
-    <color name="md_theme_surfaceDim">#DCD8E6</color>
-    <color name="md_theme_surfaceBright">#FCF8FF</color>
+    <color name="md_theme_inverseSurface">#2E3038</color>
+    <color name="md_theme_inverseOnSurface">#EFF0FA</color>
+    <color name="md_theme_inversePrimary">#ADC6FF</color>
+    <color name="md_theme_primaryFixed">#D8E2FF</color>
+    <color name="md_theme_onPrimaryFixed">#001A42</color>
+    <color name="md_theme_primaryFixedDim">#ADC6FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004395</color>
+    <color name="md_theme_secondaryFixed">#D8E2FF</color>
+    <color name="md_theme_onSecondaryFixed">#001A42</color>
+    <color name="md_theme_secondaryFixedDim">#B1C6F9</color>
+    <color name="md_theme_onSecondaryFixedVariant">#304671</color>
+    <color name="md_theme_tertiaryFixed">#FDD6FF</color>
+    <color name="md_theme_onTertiaryFixed">#340042</color>
+    <color name="md_theme_tertiaryFixedDim">#F4AEFF</color>
+    <color name="md_theme_onTertiaryFixedVariant">#74198B</color>
+    <color name="md_theme_surfaceDim">#D8D9E3</color>
+    <color name="md_theme_surfaceBright">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow">#F6F1FF</color>
-    <color name="md_theme_surfaceContainer">#F0ECFA</color>
-    <color name="md_theme_surfaceContainerHigh">#EBE6F4</color>
-    <color name="md_theme_surfaceContainerHighest">#E5E0EE</color>
-    <color name="md_theme_primary_mediumContrast">#2D00B0</color>
+    <color name="md_theme_surfaceContainerLow">#F2F3FD</color>
+    <color name="md_theme_surfaceContainer">#ECEDF7</color>
+    <color name="md_theme_surfaceContainerHigh">#E6E7F2</color>
+    <color name="md_theme_surfaceContainerHighest">#E1E2EC</color>
+    <color name="md_theme_primary_mediumContrast">#003475</color>
     <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_mediumContrast">#4425D6</color>
-    <color name="md_theme_onPrimaryContainer_mediumContrast">#EDE8FF</color>
-    <color name="md_theme_secondary_mediumContrast">#332B73</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#0E69DC</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#1F355F</color>
     <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_mediumContrast">#6B64AF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#576D9A</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_mediumContrast">#630069</color>
+    <color name="md_theme_tertiary_mediumContrast">#5F0075</color>
     <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#890091</color>
-    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFE2F8</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#A047B5</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
     <color name="md_theme_error_mediumContrast">#740006</color>
     <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
     <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
     <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_background_mediumContrast">#FCF8FF</color>
-    <color name="md_theme_onBackground_mediumContrast">#1C1A24</color>
-    <color name="md_theme_surface_mediumContrast">#FCF8FF</color>
-    <color name="md_theme_onSurface_mediumContrast">#111019</color>
-    <color name="md_theme_surfaceVariant_mediumContrast">#E5E0F5</color>
-    <color name="md_theme_onSurfaceVariant_mediumContrast">#363444</color>
-    <color name="md_theme_outline_mediumContrast">#535061</color>
-    <color name="md_theme_outlineVariant_mediumContrast">#6E6B7D</color>
+    <color name="md_theme_background_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#191B23</color>
+    <color name="md_theme_surface_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#0E1118</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DEE2F2</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#313642</color>
+    <color name="md_theme_outline_mediumContrast">#4D5260</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#686D7B</color>
     <color name="md_theme_scrim_mediumContrast">#000000</color>
-    <color name="md_theme_inverseSurface_mediumContrast">#312F39</color>
-    <color name="md_theme_inverseOnSurface_mediumContrast">#F3EFFD</color>
-    <color name="md_theme_inversePrimary_mediumContrast">#C6BFFF</color>
-    <color name="md_theme_primaryFixed_mediumContrast">#6550F7</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2E3038</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#EFF0FA</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#ADC6FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#0E69DC</color>
     <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_mediumContrast">#4C31DE</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#0051B0</color>
     <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_mediumContrast">#6B64AF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#576D9A</color>
     <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_mediumContrast">#524B94</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#3F5480</color>
     <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#B037B5</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#A047B5</color>
     <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#93149A</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#842B9B</color>
     <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_mediumContrast">#C8C4D2</color>
-    <color name="md_theme_surfaceBright_mediumContrast">#FCF8FF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C4C6D0</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow_mediumContrast">#F6F1FF</color>
-    <color name="md_theme_surfaceContainer_mediumContrast">#EBE6F4</color>
-    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DFDBE8</color>
-    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D4D0DD</color>
-    <color name="md_theme_primary_highContrast">#240094</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F2F3FD</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E6E7F2</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DBDCE6</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D0D1DB</color>
+    <color name="md_theme_primary_highContrast">#002A62</color>
     <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_highContrast">#401ED2</color>
+    <color name="md_theme_primaryContainer_highContrast">#004699</color>
     <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondary_highContrast">#292069</color>
+    <color name="md_theme_secondary_highContrast">#132B55</color>
     <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_highContrast">#463F88</color>
+    <color name="md_theme_secondaryContainer_highContrast">#334974</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_highContrast">#530058</color>
+    <color name="md_theme_tertiary_highContrast">#4F0062</color>
     <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#83008B</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#771C8E</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
     <color name="md_theme_error_highContrast">#600004</color>
     <color name="md_theme_onError_highContrast">#FFFFFF</color>
     <color name="md_theme_errorContainer_highContrast">#98000A</color>
     <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_background_highContrast">#FCF8FF</color>
-    <color name="md_theme_onBackground_highContrast">#1C1A24</color>
-    <color name="md_theme_surface_highContrast">#FCF8FF</color>
+    <color name="md_theme_background_highContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#191B23</color>
+    <color name="md_theme_surface_highContrast">#F9F9FF</color>
     <color name="md_theme_onSurface_highContrast">#000000</color>
-    <color name="md_theme_surfaceVariant_highContrast">#E5E0F5</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DEE2F2</color>
     <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
-    <color name="md_theme_outline_highContrast">#2C2A3A</color>
-    <color name="md_theme_outlineVariant_highContrast">#494758</color>
+    <color name="md_theme_outline_highContrast">#272C38</color>
+    <color name="md_theme_outlineVariant_highContrast">#444956</color>
     <color name="md_theme_scrim_highContrast">#000000</color>
-    <color name="md_theme_inverseSurface_highContrast">#312F39</color>
+    <color name="md_theme_inverseSurface_highContrast">#2E3038</color>
     <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
-    <color name="md_theme_inversePrimary_highContrast">#C6BFFF</color>
-    <color name="md_theme_primaryFixed_highContrast">#401ED2</color>
+    <color name="md_theme_inversePrimary_highContrast">#ADC6FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#004699</color>
     <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_highContrast">#2A00A6</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#00306E</color>
     <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_highContrast">#463F88</color>
+    <color name="md_theme_secondaryFixed_highContrast">#334974</color>
     <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_highContrast">#302770</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#1B325C</color>
     <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#83008B</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#771C8E</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#5D0063</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#59006E</color>
     <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_highContrast">#BBB7C4</color>
-    <color name="md_theme_surfaceBright_highContrast">#FCF8FF</color>
+    <color name="md_theme_surfaceDim_highContrast">#B7B8C2</color>
+    <color name="md_theme_surfaceBright_highContrast">#F9F9FF</color>
     <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow_highContrast">#F3EFFD</color>
-    <color name="md_theme_surfaceContainer_highContrast">#E5E0EE</color>
-    <color name="md_theme_surfaceContainerHigh_highContrast">#D7D2E0</color>
-    <color name="md_theme_surfaceContainerHighest_highContrast">#C8C4D2</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#EFF0FA</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E1E2EC</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D3D4DE</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C4C6D0</color>
 </resources>
